Refactor ProjectController and ProjectService to enhance project management features, including dashboard display, project creation, and updates with validation, while introducing a new HTML template for the project dashboard.